--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <title></title>
   </head>
   <body>
-    <h1></h1>
+    <h1>Discover hidden places in the world around you</h1>
+    <p><a href="">Download Excursion (Coming soon!)</a></p>
   </body>
 </html>
+
+
+
+
