--- a/index.html
+++ b/index.html
@@ -1,25 +1,22 @@
 <!DOCTYPE html>
 <html>
   <head>
-<<<<<<< HEAD
 	<link href="./resources/css/style.css" type="text/css" rel="stylesheet">
     <title>Excursion</title>
   </head>
   <body>
-    <h1>iscover hidden places in the world around you</h1>
-    <p><a href="">Download Excursion (Coming soon!)</a></p>
-  </body>
-</html>
-=======
-    <title></title>
-  </head>
-  <body>
     <h1>Discover hidden places in the world around you</h1>
-    <p><a href="">Download Excursion (Coming soon!)</a></p>
+    <a href="">Download Excursion (Coming soon!)</a><br>
+	<video autoplay="" muted="" loop="">
+      <source src="resources/excursion.mp4" type="video/mp4">
+	  your browser does not support this video
+    </video>
+	<h2>Your personal travel guide</h2>
+	<p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+	<p><img src="./resources/camp.jpg" /></p>
+	<p><img src="./resources/phone.png" /></p>
+	<h2>Coming Soon for iPhone and Android</h2>
+	<a href="">Download Excursion (Coming soon!)</a>
+	<p class="copyright">&copy; Excursion</p>
   </body>
 </html>
-
-
-
-
->>>>>>> dfc8b2269de8dbd1d33c6808e7e1165f34583162
